--- a/libRaftCore/libRaftCore.vcxproj
+++ b/libRaftCore/libRaftCore.vcxproj
@@ -55,7 +55,7 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_DEBUG;_WINDOWS;_USRDLL;LIBRAFTCORE_DLL;LIBRAFTCORE_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalOptions> /utf-8 %(AdditionalOptions)</AdditionalOptions>
-      <AdditionalIncludeDirectories>../include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../include;./</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -86,6 +86,16 @@
   <ItemGroup>
     <ClInclude Include="libRaftCore.h" />
     <ClInclude Include="Log4CxxLogger.h" />
+    <ClInclude Include="network\EventBase.h" />
+    <ClInclude Include="network\EventSession.h" />
+    <ClInclude Include="network\IoEventBase.h" />
+    <ClInclude Include="network\ListenEventBase.h" />
+    <ClInclude Include="network\RaftAdminClient.h" />
+    <ClInclude Include="network\RaftClientPool.h" />
+    <ClInclude Include="network\RaftClientSession.h" />
+    <ClInclude Include="network\RaftIoBase.h" />
+    <ClInclude Include="network\RaftServer.h" />
+    <ClInclude Include="network\RaftSession.h" />
     <ClInclude Include="Progress.h" />
     <ClInclude Include="Raft.h" />
     <ClInclude Include="raft.pb.h" />
@@ -101,6 +111,8 @@
     <ClInclude Include="RaftUtil.h" />
     <ClInclude Include="ReadOnly.h" />
     <ClInclude Include="RocksDbStorage.h" />
+    <ClInclude Include="services\KvRocksdbService.h" />
+    <ClInclude Include="services\KvService.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="UnstableLog.h" />
@@ -116,6 +128,16 @@
     </ClCompile>
     <ClCompile Include="libRaftCore.cpp" />
     <ClCompile Include="Log4CxxLogger.cpp" />
+    <ClCompile Include="network\EventBase.cpp" />
+    <ClCompile Include="network\EventSession.cpp" />
+    <ClCompile Include="network\IoEventBase.cpp" />
+    <ClCompile Include="network\ListenEventBase.cpp" />
+    <ClCompile Include="network\RaftAdminClient.cpp" />
+    <ClCompile Include="network\RaftClientPool.cpp" />
+    <ClCompile Include="network\RaftClientSession.cpp" />
+    <ClCompile Include="network\RaftIoBase.cpp" />
+    <ClCompile Include="network\RaftServer.cpp" />
+    <ClCompile Include="network\RaftSession.cpp" />
     <ClCompile Include="Progress.cpp" />
     <ClCompile Include="Raft.cpp" />
     <ClCompile Include="raft.pb.cpp" />
@@ -127,6 +149,7 @@
     <ClCompile Include="RaftUtil.cpp" />
     <ClCompile Include="ReadOnly.cpp" />
     <ClCompile Include="RocksDbStorage.cpp" />
+    <ClCompile Include="services\KvRocksdbService.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
