--- a/TestRaft/TestRaft.vcxproj.filters
+++ b/TestRaft/TestRaft.vcxproj.filters
@@ -33,6 +33,12 @@
     <ClInclude Include="Resource.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="TestSampleFixtrue.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="TestSeqsFixture.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="TestRaft.cpp">
@@ -42,6 +48,12 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="stdafx.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="TestSampleFixtrue.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="TestSeqsFixture.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
