--- a/TestRaft/TestRaft.vcxproj
+++ b/TestRaft/TestRaft.vcxproj
@@ -63,7 +63,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <AdditionalLibraryDirectories>$(OutDir)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>cppunitd.lib;testrunnerud.lib;libRaftCore.lib</AdditionalDependencies>
+      <AdditionalDependencies>cppunitd.lib;testrunnerud.lib;libRaftCore.lib;libprotobufd.lib</AdditionalDependencies>
     </Link>
     <Midl>
       <MkTypLibCompatible>false</MkTypLibCompatible>
@@ -106,23 +106,29 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="NullLogger.h" />
+    <ClInclude Include="raft.pb.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="TestRaft.h" />
     <ClInclude Include="TestRaftDlg.h" />
-    <ClInclude Include="TestSampleFixtrue.h" />
+    <ClInclude Include="TestEventBaseFixtrue.h" />
     <ClInclude Include="TestSeqsFixture.h" />
+    <ClInclude Include="TestUnstableLogFixture.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="NullLogger.cpp" />
+    <ClCompile Include="raft.pb.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="TestRaft.cpp" />
     <ClCompile Include="TestRaftDlg.cpp" />
-    <ClCompile Include="TestSampleFixtrue.cpp" />
+    <ClCompile Include="TestEventBaseFixtrue.cpp" />
     <ClCompile Include="TestSeqsFixture.cpp" />
+    <ClCompile Include="TestUnstableLogFixture.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="TestRaft.rc" />
