--- a/TestRaft/TestRaft.vcxproj
+++ b/TestRaft/TestRaft.vcxproj
@@ -111,12 +111,15 @@
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="TestFlowControllerFixture.h" />
     <ClInclude Include="TestMemStorageFixture.h" />
     <ClInclude Include="TestProgressFixture.h" />
     <ClInclude Include="TestRaft.h" />
     <ClInclude Include="TestRaftDlg.h" />
     <ClInclude Include="TestEventBaseFixtrue.h" />
+    <ClInclude Include="TestRaftFrame.h" />
     <ClInclude Include="TestRaftLogFixture.h" />
+    <ClInclude Include="TestRaftPaperFixture.h" />
     <ClInclude Include="TestSeqsFixture.h" />
     <ClInclude Include="TestUnstableLogFixture.h" />
   </ItemGroup>
@@ -127,12 +130,15 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="TestFlowControllerFixture.cpp" />
     <ClCompile Include="TestMemStorageFixture.cpp" />
     <ClCompile Include="TestProgressFixture.cpp" />
     <ClCompile Include="TestRaft.cpp" />
     <ClCompile Include="TestRaftDlg.cpp" />
     <ClCompile Include="TestEventBaseFixtrue.cpp" />
+    <ClCompile Include="TestRaftFrame.cpp" />
     <ClCompile Include="TestRaftLogFixture.cpp" />
+    <ClCompile Include="TestRaftPaperFixture.cpp" />
     <ClCompile Include="TestSeqsFixture.cpp" />
     <ClCompile Include="TestUnstableLogFixture.cpp" />
   </ItemGroup>
